<resources>
    <string name="app_name">SimpleDynamit</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">jonathan.sandoval@live.com</string>
    <string name="nav_header_desc">Dynamit Code Challenge</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cityName">City:</string>
    <string name="countryName">Country:</string>
    <string name="countName">Count:</string>

    <string name="lorepIpsumText">Lorem ipsum dolor sit amet, ea petentium voluptaria eum, mea autem nulla eu, in unum elitr usu. Agam erroribus mel cu, eam aliquid imperdiet at. Ne eum laudem iracundia, per movet dicant praesent eu. Ei labores patrioque laboramus has. Cu lorem argumentum sed, qui insolens recteque at, adhuc quaeque duo ad. At duo errem alienum appareat, sed te nisl mazim.

        Duo ad enim saepe facete, et vel vero tota aperiri. Has augue delicata philosophia no, in nullam salutatus dissentias usu, solet option scripserit ad vim. Ad oporteat gloriatur elaboraret mei. Reque debitis ad pri. Eu pro zril tamquam evertitur, nec laudem numquam accumsan in, vis ei novum constituam.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="README">Display a listing of the city names and number of measurements that are available for that city. Do
not show any cities that have less than 10,000 measurements. The listing should be sorted
descending by number of measurements. The app should use the most efficient way possible to
filter and sort the data.</string>
    <string name="aboutText">About...</string>
    <string name="aboutLibrariesText">\nLiraries...</string>
    <string name="librariesText">\n
        * Retrofit \n
        * Picasso \n
        * Spek
    </string>
    <string name="launch_cities">Launch Cities</string>
    <string name="while_404">While 404..</string>
    <string name="something_interesting">Isaac Newton was born prematurely on Christmas Day 1642 at his family’s home, Woolsthorpe Manor, near the town of Grantham, England, several months after the death of his father, an illiterate farmer. When Newton was three, his mother wed a wealthy clergyman, Barnabas Smith, who didn’t want a stepson. Newton’s mother went to live with her new husband in another village, leaving behind her young son in the care of his grandparents. The experience of being abandoned by his mother scarred Newton and likely played a role in shaping his solitary, untrusting nature. As a teen, he made a list of his past sins and among them was: “Threatening my father and mother Smith to burn them and the house over them.” As an adult, Newton immersed himself in his work, had no hobbies and never married. He even remained silent about some of his scientific and mathematical discoveries for years, if he published them at all.

</string>

</resources>
