<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="test.platzi.com.raian.com.org.simpledynamit.ui.activity.WelcomeActivity"
    tools:showIn="@layout/app_bar_welcome"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/welcomeMessageLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BABABA"
        android:visibility="visible">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/aboutText"
            android:paddingLeft="7dp"
            android:textColor="#383838"
            android:textSize="28sp"
            android:textStyle="bold"
            android:paddingStart="7dp" />

        <TextView
            android:id="@+id/welcome_messgae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_title"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/README"
            android:textColor="#FFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/welcome_and_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutLibrariesText"
            android:paddingLeft="7dp"
            android:textColor="#383838"
            android:textSize="28sp"
            android:textStyle="bold"
            android:paddingStart="7dp"
            android:layout_below="@+id/welcome_messgae"/>

        <TextView
            android:id="@+id/welcome_and_more_libs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_and_more"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/librariesText"
            android:textColor="#FFFF"
            android:textSize="18sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:background="#001B21"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="Got It"
            android:textColor="#fff"
            android:id="@+id/mButtonDimissWelcome"/>



    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mFrameLayoutMainContent"/>


</LinearLayout>