<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="1dp"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/cardViewContainer"
        android:layout_width="match_parent"
        android:layout_height="122dp">

        <ImageView
            android:id="@+id/mImageViewCity"
            android:transitionName="mImageViewHeaderCityDetailTransition"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/mTextViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/cityName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTextViewCityValue"
            android:transitionName="mTextViewDetailCityTransition"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            tools:text="--" />

        <TextView
            android:id="@+id/mTextViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/countryName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTextViewCountryValue"
            android:transitionName="mTextViewDetailCountryTransition"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="50dp"
            tools:text="--"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTextViewCount"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="90dp"
            android:text="@string/countName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTextViewCountValue"
            android:transitionName="mTextViewDetailCountTransition"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="90dp"
            tools:text="--"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>